--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright 2025 - Ecommerce WebPage</p>
+            <p class="copyright">Copyright © 2025 - Ecommerce WebPage</p>
         </div>
     </div>
 
