--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div> 
     </div>
-    <!---------- featured categories ----------->
+    <!---------- featured categories --------------->
     <div class="categories">
         <div class="small-container">
             <div class="row">
