--- a/productdetails.html
+++ b/productdetails.html
@@ -176,7 +176,7 @@
     </script>
 
 
-<!------------------------js for product gallery-------------> 
+<!--------------------js for product gallery-------------> 
 
 
 <script>
