--- a/productdetails.html
+++ b/productdetails.html
@@ -161,7 +161,7 @@
         </div>
     </div>
 
-    <!--------------js for toggle menu------------->
+    <!---------------------js for toggle menu------------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px";
