--- a/productdetails.html
+++ b/productdetails.html
@@ -68,6 +68,16 @@
             </div>
         </div>
     </div>
+
+    <!-------------titlle-------------->
+    <div class="small-container">
+        <div class="row row-2">
+            <h2>Related Products</h2>
+            <p>View More</p>
+        </div>
+    </div>
+
+    <!-----------products--------------->
     <div class="small-container">
         <div class="row">
             <div class="col-4">
@@ -161,7 +171,7 @@
         </div>
     </div>
 
-    <!---------------------js for toggle menu------------->
+    <!--------------------js for toggle menu------------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px";
@@ -180,7 +190,22 @@
 
 
 <script>
-    var ProductImg
+    var ProductImg = document.getElementById("ProductImg");
+    var SmallImg = document.getElementsByClassName("small-img");
+    SmallImg[0].onclick = function(){
+        ProductImg.src = SmallImg[0].src;
+    }
+    SmallImg[1].onclick = function(){
+        ProductImg.src = SmallImg[1].src;
+    }
+    SmallImg[2].onclick = function(){
+        ProductImg.src = SmallImg[2].src;
+    }
+    SmallImg[3].onclick = function(){
+        ProductImg.src = SmallImg[3].src;
+    }
 </script>
+
+
 </body>
 </html>
